# VideoProcessingTest

./: CMakeLists.txt  README.md  ipcamera.cpp  ipcamera.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  nnforwarder.cpp  nnforwarder.h  streaminterface.h  tcpreader.cpp  tcpreader.h  tcpsender.cpp  tcpsender.h  usbcamera.cpp  usbcamera.h  usbcamera12bit.cpp  usbcamera12bit.h
